--- a/css/styles.css
+++ b/css/styles.css
@@ -172,7 +172,7 @@ header{ border-bottom: 1px solid #ececec;}
   display: block;
   position: relative;
   padding-bottom: 32px;
-  /transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
 .site-nave__link:hover,
@@ -527,14 +527,14 @@ color: var(--primary-text-color);
 
   /* checkbox */
   
-  .privacy a{
+  .privacy__link{
     color: var(--accent-color);
   }
   
-  .privacy label {
+  .privacy__label {
     position: relative;
   }
-.privacy input {
+.privacy__input {
   display: none;
 }
 .privacy {
@@ -546,7 +546,7 @@ color: var(--primary-text-color);
   text-align: center;
   
 }
-.privacy label::before {
+.privacy__label::before {
   cursor: pointer;
   display: inline-block;
   content: ""; 
@@ -566,9 +566,6 @@ color: var(--primary-text-color);
 
 color: var(--primary-white-color);}
 
-.privacy a{
-  color: var(--accent-color);
-}
 
 /* button */
 .button {
@@ -720,7 +717,7 @@ border-radius: 4px;
 
 /* our-team */
 
-.our-team_section{
+.our-team__section{
   background-color: var(--bgr-grey-color);
   max-width: 1600px;
 }
@@ -892,10 +889,7 @@ button {
 .footer {
   background-color: var(--bgr-darck-color);
 }
-.footer-adress .conteiner {
-  display: inline-block;
-  margin-bottom: 9px;
-}
+
 
 .contacts{
   max-width: 231px;
