--- a/css/main.css
+++ b/css/main.css
@@ -281,4 +281,18 @@ img {
   display: block;
   min-width: 100%;
   height: auto;
+}
+
+.conteiner {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+.section {
+  background-color: var(--primary-white-color);
+  width: 100%;
+  margin: 0 auto;
+  padding: 94px 0;
 }/*# sourceMappingURL=main.css.map */
