--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,3 +2,10 @@
 @import './base/modern-normalize';
 @import './base/base';
 @import './components/conteiner';
+@import './components/page-header';
+@import './components/logo';
+@import './components/current';
+@import './components/site-nave';
+@import './components/adress-head';
+
+ 
