--- a/scss/components/_conteiner.scss
+++ b/scss/components/_conteiner.scss
@@ -10,3 +10,33 @@
     margin: 0 auto;
     padding: 94px 0;
   }
+  .title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+  
+    color: var(--primary-text-color);
+  } 
+  .discription{
+    color: var(--secondary-text-color);
+    font-weight: 400;
+    font-size: 16px;
+  }
+  .h2-title {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+  }
+  
+  
+  .link {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+  
+    color: var(--primary-text-color);
+  }
